--- a/frontend/src/components/List/List.css
+++ b/frontend/src/components/List/List.css
@@ -3,3 +3,9 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+
+@media only screen and (max-width: 960px) {
+  .List {
+    display: block;
+  }
+}
